--- a/mobile/res/layout/activity_main.xml
+++ b/mobile/res/layout/activity_main.xml
@@ -1,18 +1,33 @@
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="fill_parent"
-    android:layout_height="fill_parent"
-    android:orientation="vertical">
+<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
+	android:id="@+id/drawer_layout"
+	android:layout_width="match_parent"
+	android:layout_height="match_parent">
 
-    <com.cradle.iitc_mobile.IITC_WebView
-        android:id="@+id/iitc_webview"
-        android:layout_width="fill_parent"
-        android:layout_height="fill_parent" />
-    <ImageView android:id="@+id/imageLoading"
-        android:layout_height="fill_parent"
-        android:layout_width="fill_parent"
-        android:paddingTop="20dp"
-        android:paddingBottom="20dp"
-        android:background="@android:color/darker_gray"
-        android:src="@drawable/iitc" />
+	<com.cradle.iitc_mobile.IITC_WebView
+		android:id="@+id/iitc_webview"
+		android:layout_width="match_parent"
+		android:layout_height="match_parent"/>
 
-</LinearLayout>
+	<ImageView
+		android:id="@+id/imageLoading"
+		android:layout_width="match_parent"
+		android:layout_height="match_parent"
+		android:background="@android:color/darker_gray"
+		android:paddingBottom="20dp"
+		android:paddingTop="20dp"
+		android:src="@drawable/iitc"/>
+
+	<!-- The navigation drawer -->
+	<!-- TODO: change color/width? -->
+
+	<ListView
+		android:id="@+id/left_drawer"
+		android:layout_width="240dp"
+		android:layout_height="match_parent"
+		android:layout_gravity="start"
+		android:background="#111"
+		android:choiceMode="singleChoice"
+		android:divider="@android:color/transparent"
+		android:dividerHeight="0dp"/>
+
+</android.support.v4.widget.DrawerLayout>
