Introduce a second drawer with map settings

--- a/mobile/res/values/styles.xml
+++ b/mobile/res/values/styles.xml
@@ -17,4 +17,6 @@
         <!-- All customizations that are NOT specific to a particular API-level can go here. -->
     </style>
 
+    <color name="drawer_background">#99111111</color>
+
 </resources>
