update leaflet-draw to 0.2.1 (unmodified, except for image paths in css. geodesic changes in next commit) note: non-minified version this time, to aid any future modifications

--- a/external/leaflet.draw.css
+++ b/external/leaflet.draw.css
@@ -27,6 +27,11 @@
 	background-repeat: no-repeat;
 }
 
+.leaflet-retina .leaflet-draw-toolbar a {
+	background-image: url(@@INCLUDEIMAGE:images/draw-spritesheet-2x.png@@);
+	background-size: 210px 30px;
+}
+
 .leaflet-draw a {
 	display: block;
 	text-align: center;
@@ -47,8 +52,13 @@
 	top: 0;
 }
 
+.leaflet-right .leaflet-draw-actions {
+	right:26px;
+	left:auto;
+}
+
 .leaflet-draw-actions li {
-	float: left;
+	display: inline-block;
 }
 
 .leaflet-draw-actions li:first-child a {
@@ -60,6 +70,16 @@
 	        border-radius: 0 4px 4px 0;
 }
 
+.leaflet-right .leaflet-draw-actions li:last-child a {
+	-webkit-border-radius: 0;
+	        border-radius: 0;
+}
+
+.leaflet-right .leaflet-draw-actions li:first-child a {
+	-webkit-border-radius: 4px 0 0 4px;
+	        border-radius: 4px 0 0 4px;
+}
+
 .leaflet-draw-actions a {
 	background-color: #919187;
 	border-left: 1px solid #AAA;
@@ -67,7 +87,8 @@
 	font: 11px/19px "Helvetica Neue", Arial, Helvetica, sans-serif;
 	line-height: 28px;
 	text-decoration: none;
-	width: 50px;
+	padding-left: 10px;
+	padding-right: 10px;
 	height: 28px;
 }
 
@@ -77,6 +98,7 @@
 
 .leaflet-draw-actions-top {
 	margin-top: 1px;
+	white-space: nowrap;
 }
 
 .leaflet-draw-actions-top a,
