--- a/style.css
+++ b/style.css
@@ -9,11 +9,12 @@ html, body, #map {
 
 body {
   font-size: 14px;
-  font-family: "roboto",arial,helvetica,sans-serif;
+  font-family: "Roboto",arial,helvetica,sans-serif;
   margin: 0;
 }
 
 #scrollwrapper {
+  font-family: Coda, sans-serif;
   overflow-x: hidden;
   overflow-y: auto;
   position: fixed;
@@ -255,7 +256,7 @@ em {
 }
 
 #chat td, #chatinput td {
-  font-family: Verdana, sans-serif;
+  font-family: Roboto, sans-serif;
   font-size: 12.6px;
   vertical-align: top;
   padding-bottom: 3px;
@@ -302,7 +303,7 @@ mark {
 summary {
   color: #bbb;
   display: inline-block;
-  font-family: Verdana,sans-serif;
+  font-family: Roboto,sans-serif;
   height: 16px;
   overflow: hidden;
   padding: 0 2px;
@@ -333,7 +334,7 @@ summary {
 #chatinput input {
   background: transparent;
   font-size: 12.6px;
-  font-family: Verdana,sans-serif;
+  font-family: Roboto,sans-serif;
   color: #EEEEEE;
   width: 100%;
   height: 100%;
@@ -697,7 +698,7 @@ h3 {
   right: 2px;
   cursor: pointer;
   color: #FFCE00;
-  font-family: "Arial", sans;
+  font-family: Roboto, sans-serif;
   font-size: 16px;
 }
 
@@ -783,6 +784,7 @@ h3 {
 }
 
 .ui-dialog-titlebar {
+  font: 13px/15px Roboto, Arial, Helvetica, sans-serif;
   text-align: center;
   padding: 4px;
   background-color: rgba(8, 60, 78, 0.9);
