--- a/style.css
+++ b/style.css
@@ -9,12 +9,11 @@ html, body, #map {
 
 body {
   font-size: 14px;
-  font-family: "Roboto",arial,helvetica,sans-serif;
+  font-family: "Roboto", "Helvetica Neue", Helvetica, sans-serif;
   margin: 0;
 }
 
 #scrollwrapper {
-  font-family: Coda, sans-serif;
   overflow-x: hidden;
   overflow-y: auto;
   position: fixed;
@@ -137,7 +136,7 @@ a:hover {
 .fieldmu {
   color: #FFCE00;
   font-size: 13px;
-  font-family: "roboto",arial,helvetica,sans-serif; /*override leaflet-container */
+  font-family: Roboto, "Helvetica Neue", Helvetica, sans-serif; /*override leaflet-container */
   text-align: center;
   text-shadow: 0 0 0.2em black, 0 0 0.2em black, 0 0 0.2em black;
   pointer-events: none;
@@ -211,6 +210,7 @@ a:hover {
   z-index: 3000;
   background: rgba(8, 48, 78, 0.9);
   font-size: 12.6px;
+  line-height: 14px;
   color: #eee;
   border: 1px solid #20A8B1;
   border-bottom: 0;
@@ -256,7 +256,6 @@ em {
 }
 
 #chat td, #chatinput td {
-  font-family: Roboto, sans-serif;
   font-size: 12.6px;
   vertical-align: top;
   padding-bottom: 3px;
@@ -303,7 +302,6 @@ mark {
 summary {
   color: #bbb;
   display: inline-block;
-  font-family: Roboto,sans-serif;
   height: 16px;
   overflow: hidden;
   padding: 0 2px;
@@ -334,7 +332,6 @@ summary {
 #chatinput input {
   background: transparent;
   font-size: 12.6px;
-  font-family: Roboto,sans-serif;
   color: #EEEEEE;
   width: 100%;
   height: 100%;
@@ -385,6 +382,7 @@ h2 {
 }
 
 h2 #name {
+  font-weight: 300;
   display: inline-block;
   overflow: hidden;
   text-overflow: ellipsis;
@@ -698,7 +696,6 @@ h3 {
   right: 2px;
   cursor: pointer;
   color: #FFCE00;
-  font-family: Roboto, sans-serif;
   font-size: 16px;
 }
 
@@ -743,7 +740,8 @@ h3 {
   background-color: rgba(8, 48, 78, 0.9);
   border: 1px solid #20A8B1;
   color: #eee;
-  font: 13px/15px Roboto, Arial, Helvetica, sans-serif;
+  font-size: 13px;
+  line-height: 15px;
   padding: 2px 4px;
 }
 
@@ -784,7 +782,8 @@ h3 {
 }
 
 .ui-dialog-titlebar {
-  font: 13px/15px Roboto, Arial, Helvetica, sans-serif;
+  font-size: 13px;
+  line-height: 15px;
   text-align: center;
   padding: 4px;
   background-color: rgba(8, 60, 78, 0.9);
@@ -894,7 +893,6 @@ td + td {
 /* redeem results *****************************************************/
 .redeem-result-table {
   font-size: 14px;
-  font-family: Roboto, Arial, Helvetica, sans-serif;
   table-layout: fixed;
 }
 
@@ -945,13 +943,12 @@ td + td {
   color: #28f428;
 }
 
-#portal_highlight_select{
+#portal_highlight_select {
   position: absolute;
   top:5px;
   left:10px;
   z-index: 2500;
   font-size:11px;
-  font-family: "roboto",arial,helvetica,sans-serif;
   background-color:#0E3C46;
   color:#ffce00;
   
