--- a/mobile/res/xml/preferences.xml
+++ b/mobile/res/xml/preferences.xml
@@ -57,6 +57,11 @@
 	        android:summary="@string/pref_force_https_sum"
 	        android:defaultValue="true" />
         <CheckBoxPreference
+            android:key="pref_external_storage"
+            android:title="@string/pref_external_storage"
+            android:summary="@string/pref_external_storage_sum"
+            android:defaultValue="false" />
+        <CheckBoxPreference
                 android:key="pref_press_twice_to_exit"
                 android:title="@string/pref_press_twice_to_exit"
                 android:summary="@string/pref_press_twice_to_exit_sum"
