- changed build script. get rid of mobile-test shell scripts - use git hash as version number for test builds

--- a/mobile/res/xml/preferences.xml
+++ b/mobile/res/xml/preferences.xml
@@ -48,7 +48,7 @@
             android:title="@string/pref_plugins"
             android:persistent="false">
             <intent
-                android:targetPackage="com.cradle.iitc_mobile"
+                android:targetPackage="com.cradle.iitc_mobile.test"
                 android:targetClass="com.cradle.iitc_mobile.IITC_PluginPreferenceActivity"/>
         </PreferenceScreen>
 	    <CheckBoxPreference
