--- a/plugins/bookmarks-css.css
+++ b/plugins/bookmarks-css.css
@@ -367,7 +367,7 @@
 	margin: 0 !important;
 	padding: 0 !important;
 	border: 0 !important;
-	background: #0E3D4E;
+	background: transparent !important;;
 }
 #bookmarksBox.mobile .bookmarkList ul,
 #bookmarksBox.mobile .bookmarkList ul li,
