--- a/plugins/bookmarks-css.css
+++ b/plugins/bookmarks-css.css
@@ -358,131 +358,139 @@
 /**********************************************
 	MOBILE
 **********************************************/
-#bookmarksBox.mobile{
-	position:absolute !important;
-	width: 100% !important;
-	height: 100% !important;
-	top: 0 !important;
-	left: 0 !important;
-	margin: 0 !important;
-	padding: 0 !important;
-	border: 0 !important;
-	background: transparent !important;;
+#sidebar #bookmarksBox{
+	position:static !important;
+	width:auto !important;
+	margin:0 !important;
 }
-#bookmarksBox.mobile .bookmarkList ul,
-#bookmarksBox.mobile .bookmarkList ul li,
-#bookmarksBox.mobile .bookmarkList.current,
-#bookmarksBox.mobile .bookmarkList li.bookmarkFolder.open ul{
+#sidebar #bkmrksTrigger,
+#sidebar #bookmarksBox .bookmarkList ul,
+#sidebar #bookmarksBox .bookmarkList ul li,
+#sidebar #bookmarksBox .bookmarkList.current,
+#sidebar #bookmarksBox .bookmarkList li.bookmarkFolder.open ul{
 	width:100% !important;
 	display:block !important;
 }
-#bookmarksBox.mobile *{
+#sidebar #bookmarksBox *{
 	box-shadow:none !important;
 	border-width:0 !important;
 }
-#bookmarksBox.mobile #topBar{
+#sidebar #bookmarksBox #topBar{
 	display:none !important;
 }
-#bookmarksBox.mobile #bookmarksTypeBar h5{
+#sidebar #bookmarksBox #bookmarksTypeBar h5{
 	cursor:pointer;
 	text-align:center;
 	float:left;
 	width:50%;
 	padding:7px 0;
 }
-#bookmarksBox.mobile #bookmarksTypeBar h5.current{
+#sidebar #bookmarksBox #bookmarksTypeBar h5.current{
 	cursor:default;
 	color:#fff;
 }
-#bookmarksBox.mobile #bookmarksTypeBar,
-#bookmarksBox.mobile .bookmarkList .addForm{
+#sidebar #bookmarksBox #bookmarksTypeBar,
+#sidebar #bookmarksBox .bookmarkList .addForm{
 	border-bottom:1px solid #20a8b1 !important;
 }
-#bookmarksBox.mobile .bookmarkList ul li ul li.bkmrk,
-#bookmarksBox.mobile .bookmarkList li.bookmarkFolder .folderLabel{
+#sidebar #bookmarksBox .bookmarkList ul li ul li.bkmrk,
+#sidebar #bookmarksBox .bookmarkList li.bookmarkFolder .folderLabel{
 	height:36px !important;
 	clear:both;
 }
-#bookmarksBox.mobile .bookmarkList li.bookmarkFolder .folderLabel a,
-#bookmarksBox.mobile .bookmarkList ul li ul li.bkmrk a{
+#sidebar #bookmarksBox .bookmarkList li.bookmarkFolder .folderLabel a,
+#sidebar #bookmarksBox .bookmarkList ul li ul li.bkmrk a{
 	background:none;
 	padding:7px 0;
 	height:auto;
 	box-shadow:inset 0 1px 0 #20a8b1 !important;
 }
-#bookmarksBox.mobile .bookmarkList li.bookmarkFolder a.bookmarksRemoveFrom,
-#bookmarksBox.mobile .bookmarkList li.bkmrk a.bookmarksRemoveFrom{
+#sidebar #bookmarksBox .bookmarkList li.bookmarkFolder a.bookmarksRemoveFrom,
+#sidebar #bookmarksBox .bookmarkList li.bkmrk a.bookmarksRemoveFrom{
 	box-shadow:inset 0 1px 0 #20a8b1,inset -1px 0 0 #20a8b1 !important;
 	width:15%;
 	background:none !important;
 }
-#bookmarksBox.mobile .bookmarkList li.bookmarkFolder a.bookmarksAnchor,
-#bookmarksBox.mobile .bookmarkList li.bkmrk a.bookmarksLink{
+#sidebar #bookmarksBox .bookmarkList li.bookmarkFolder a.bookmarksAnchor,
+#sidebar #bookmarksBox .bookmarkList li.bkmrk a.bookmarksLink{
 	text-indent:10px;
 	width:85%;
 	height:21px;
 	overflow:hidden;
 }
-#bookmarksBox.mobile .bookmarkList ul li.bookmarkFolder ul{
+#sidebar #bookmarksBox .bookmarkList ul li.bookmarkFolder ul{
 	margin-left:0 !important;
 }
-#bookmarksBox.mobile .bookmarkList > ul{
+#sidebar #bookmarksBox .bookmarkList > ul{
 	border-bottom:1px solid #20a8b1 !important;
 	border-right:1px solid #20a8b1 !important;
 }
 
-#bookmarksBox.mobile .bookmarkList .bookmarkFolder.othersBookmarks  ul{
+#sidebar #bookmarksBox .bookmarkList .bookmarkFolder.othersBookmarks  ul{
 	border-top:5px solid #20a8b1 !important;
 }
-#bookmarksBox.mobile .bookmarkList li.bookmarkFolder,
-#bookmarksBox.mobile .bookmarkList li.bkmrk{
+#sidebar #bookmarksBox .bookmarkList li.bookmarkFolder,
+#sidebar #bookmarksBox .bookmarkList li.bkmrk{
 	box-shadow:inset 0 1px 0 #20a8b1, 1px 0 0 #20a8b1, -1px 1px 0 #20a8b1 !important;
 }
-#bookmarksBox.mobile .bookmarkList > ul{
+#sidebar #bookmarksBox .bookmarkList > ul{
 	max-height:none;
 	width:85% !important;
 }
-#bookmarksBox.mobile .bookmarkList li.bookmarkFolder .folderLabel{
+#sidebar #bookmarksBox .bookmarkList li.bookmarkFolder .folderLabel{
 	box-shadow:0 1px 0 #20a8b1 !important;
 }
-#bookmarksBox.mobile .bookmarkList ul li.bookmarkFolder ul{
+#sidebar #bookmarksBox .bookmarkList ul li.bookmarkFolder ul{
 	width:85% !important;
 	margin-left:15% !important;
 }
-#bookmarksBox.mobile .bookmarkList ul li.bookmarkFolder.othersBookmarks ul{
+#sidebar #bookmarksBox .bookmarkList ul li.bookmarkFolder.othersBookmarks ul{
 	width:100% !important;
 	margin-left:0% !important;
 }
-#bookmarksBox.mobile{
+#sidebar #bkmrksTrigger{
+	position:static;
+	width:auto;
+	margin:0;
+	height:auto;
+	background:none;
+	text-indent:0;
+	padding:11px 0 9px;
+	margin-bottom:5px;
+}
+#sidebar #bkmrksTrigger.open{
+	margin-bottom:0;
+}
+#sidebar #bookmarksBox{
 	margin-bottom:5px !important;
 }
-#bookmarksBox.mobile #bookmarksTypeBar{
+#sidebar #bookmarksBox #bookmarksTypeBar{
 	height:auto;
 }
-#bookmarksBox.mobile .addForm,
-#bookmarksBox.mobile .addForm *{
+#sidebar #bookmarksBox .addForm,
+#sidebar #bookmarksBox .addForm *{
 	height:35px;
 	padding:0;
 }
-#bookmarksBox.mobile .addForm a{
+#sidebar #bookmarksBox .addForm a{
 	line-height:37px;
 }
 
-#bookmarksBox.mobile .addForm a{
+#sidebar #bookmarksBox .addForm a{
 	width:25% !important;
 }
-#bookmarksBox.mobile .addForm input{
+#sidebar #bookmarksBox .addForm input{
 	width:50% !important;
 	text-indent:10px;
 }
-#bookmarksBox.mobile #bkmrk_portals .addForm input{
+#sidebar #bookmarksBox #bkmrk_portals .addForm input{
 	width:75% !important;
 }
-#bookmarksBox.mobile #bookmarksTypeBar h5,
-#bookmarksBox.mobile .bookmarkList .addForm a{
+#sidebar #bookmarksBox #bookmarksTypeBar h5,
+#sidebar #bookmarksBox .bookmarkList .addForm a{
 	box-shadow:-1px 0 0 #20a8b1 !important;
 }
-#bookmarksBox.mobile .bookmarkList li.bookmarkFolder ul{
+#sidebar #bookmarksBox .bookmarkList li.bookmarkFolder ul{
 	display:none !important;
 	min-height:37px !important;
 }
@@ -492,26 +500,26 @@
 	padding:0 3px 1px 4px;
 	background:#262c32;
 }
-#bookmarksBox.mobile .bookmarkList .bookmarkFolder .folderLabel .bookmarksAnchor span,
-#bookmarksBox.mobile .bookmarkList .bookmarkFolder .folderLabel > span,
-#bookmarksBox.mobile .bookmarkList .bookmarkFolder .folderLabel > span > span,
-#bookmarksBox.mobile .bookmarkList .triangle{
+#sidebar #bookmarksBox .bookmarkList .bookmarkFolder .folderLabel .bookmarksAnchor span,
+#sidebar #bookmarksBox .bookmarkList .bookmarkFolder .folderLabel > span,
+#sidebar #bookmarksBox .bookmarkList .bookmarkFolder .folderLabel > span > span,
+#sidebar #bookmarksBox .bookmarkList .triangle{
 	width:0 !important;
 	height:0 !important;
 }
-#bookmarksBox.mobile .bookmarkList .bookmarkFolder .folderLabel .bookmarksAnchor span{
+#sidebar #bookmarksBox .bookmarkList .bookmarkFolder .folderLabel .bookmarksAnchor span{
 	float:left !important;
 	border-width:5px 0 5px 7px !important;
 	border-color:transparent transparent transparent white !important;
 	margin:7px 3px 0 13px !important;
 }
-#bookmarksBox.mobile .bookmarkList .bookmarkFolder.open .folderLabel .bookmarksAnchor span{
+#sidebar #bookmarksBox .bookmarkList .bookmarkFolder.open .folderLabel .bookmarksAnchor span{
 	margin:9px 1px 0 12px !important;
 	border-width:7px 5px 0 5px !important;
 	border-color:white transparent transparent transparent !important;
 }
-#bookmarksBox.mobile .bookmarkList .bookmarkFolder .folderLabel > span,
-#bookmarksBox.mobile .bookmarkList .bookmarkFolder .folderLabel > span > span{
+#sidebar #bookmarksBox .bookmarkList .bookmarkFolder .folderLabel > span,
+#sidebar #bookmarksBox .bookmarkList .bookmarkFolder .folderLabel > span > span{
 	display:none !important;
 	border-width:0 12px 10px 0 !important;
 	border-color:transparent #20a8b1 transparent transparent !important;
@@ -520,14 +528,14 @@
 	top:21px !important;
 	left:-10px !important;
 }
-#bookmarksBox.mobile .bookmarkList .bookmarkFolder .folderLabel > span > span{
+#sidebar #bookmarksBox .bookmarkList .bookmarkFolder .folderLabel > span > span{
 	top:18px !important;
 	left:0 !important;
 	border-width:0 10px 9px 0 !important;
 	border-color:transparent #069 transparent transparent !important;
 }
-#bookmarksBox.mobile .bookmarkList .bookmarkFolder.open .folderLabel > span,
-#bookmarksBox.mobile .bookmarkList .bookmarkFolder.open .folderLabel > span > span{
+#sidebar #bookmarksBox .bookmarkList .bookmarkFolder.open .folderLabel > span,
+#sidebar #bookmarksBox .bookmarkList .bookmarkFolder.open .folderLabel > span > span{
 	display:block !important;
 }
 /**********************************************
