--- a/plugins/bookmarks-css.css
+++ b/plugins/bookmarks-css.css
@@ -125,6 +125,7 @@
 	background:rgba(0,0,0,.6);
 }
 #bookmarksBox .bookmarkList > ul{
+	height: 500px;
 	width: (screen.availWidth / 6.4) + "px";
 	clear:both;
 	list-style-type:none;
