--- a/mobile/smartphone.css
+++ b/mobile/smartphone.css
@@ -61,6 +61,20 @@ body {
   -webkit-box-sizing: border-box;
 }
 
+#mobileinfo .resonator.north:before {
+  content: "";
+  background-color: red;
+  border-radius: 100%;
+  display: block;
+  height: 6px;
+  width: 6px;
+  left: 50%;
+  top: -3px; 
+  margin-left: -3px;
+  position: absolute;
+  z-index: -1;
+}
+
 #mobileinfo .filllevel {
   position: absolute;
   bottom: 0;
