--- a/mobile/plugins/user-location.css
+++ b/mobile/plugins/user-location.css
@@ -5,8 +5,11 @@
 .user-location .container {
   height: 32px;
   width: 32px;
-  transform-origin: center;
+          transform-origin: center;
   -webkit-transform-origin: center;
+          transition: all 200ms linear;
+     -moz-transition: all 200ms linear;
+  -webkit-transition: all 200ms linear;
 }
 
 .user-location .container .inner,
