--- a/mobile/res/xml/preferences.xml
+++ b/mobile/res/xml/preferences.xml
@@ -1,16 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
-
-    <PreferenceScreen
-        android:key="pref_about_screen"
-        android:persistent="false"
-        android:title="@string/pref_about_title">
-        <com.cradle.iitc_mobile.IITC_AboutDialogPreference
-            android:dialogIcon="@android:drawable/ic_dialog_info"
-            android:key="pref_about"
-            android:title="@string/pref_about_title"/>
-    </PreferenceScreen>
-
     <PreferenceCategory
         android:key="pref_ui_cat"
         android:title="@string/pref_ui_cat">
@@ -41,8 +30,8 @@
             android:title="@string/pref_force_desktop"/>
     </PreferenceCategory>
     <PreferenceCategory
-        android:key="pref_mics"
-        android:title="@string/pref_misc_cat">
+        android:key="pref_tweaks_cat"
+        android:title="@string/pref_tweaks_cat">
         <PreferenceScreen
             android:fragment="com.cradle.iitc_mobile.fragments.PluginsFragment"
             android:key="pref_plugins"
@@ -70,12 +59,13 @@
             android:title="@string/pref_press_twice_to_exit"/>
     </PreferenceCategory>
     <PreferenceCategory
-        android:key="pref_developer_options"
-        android:title="@string/pref_developer_options_cat">
+    android:key="pref_mics"
+    android:title="@string/pref_misc_cat">
         <PreferenceScreen
             android:key="pref_developer_screen"
             android:persistent="false"
-            android:title="@string/pref_advanced_options">
+            android:title="@string/pref_advanced_options"
+            android:summary="@string/pref_advanced_options_sum">
             <CheckBoxPreference
                 android:defaultValue="false"
                 android:key="pref_dev_checkbox"
@@ -110,6 +100,15 @@
                     android:summary="@string/pref_fake_user_agent_sum"
                     android:title="@string/pref_fake_user_agent"/>
             </PreferenceCategory>
+        </PreferenceScreen>
+        <PreferenceScreen
+            android:key="pref_about_screen"
+            android:persistent="false"
+            android:title="@string/pref_about_title">
+            <com.cradle.iitc_mobile.IITC_AboutDialogPreference
+                android:dialogIcon="@android:drawable/ic_dialog_info"
+                android:key="pref_about"
+                android:title="@string/pref_about_title"/>
         </PreferenceScreen>
     </PreferenceCategory>
 
