--- a/mobile/res/menu/main.xml
+++ b/mobile/res/menu/main.xml
@@ -37,6 +37,11 @@
         android:showAsAction="never"
         android:title="@string/menu_clear_cookies"/>
     <item
+        android:id="@+id/menu_send_screenshot"
+        android:orderInCategory="140"
+        android:showAsAction="never"
+        android:title="@string/menu_send_screenshot"/>
+    <item
         android:id="@+id/action_settings"
         android:orderInCategory="200"
         android:showAsAction="never"
