--- a/mobile/res/xml/preferences.xml
+++ b/mobile/res/xml/preferences.xml
@@ -18,9 +18,11 @@
             android:title="@string/pref_user_zoom"/>
 
         <MultiSelectListPreference
+            android:defaultValue="@array/pref_hide_fullscreen_defaults"
             android:entries="@array/pref_hide_fullscreen"
             android:entryValues="@array/pref_hide_fullscreen_vals"
             android:key="pref_fullscreen"
+            android:persistent="true"
             android:summary="@string/pref_fullscreen_sum"
             android:title="@string/pref_fullscreen"/>
 
@@ -77,11 +79,14 @@
             <PreferenceCategory
                 android:key="pref_advanced_ui_cat"
                 android:title="@string/pref_ui_cat">
-                <CheckBoxPreference
-                    android:defaultValue="false"
-                    android:key="pref_advanced_menu"
-                    android:summary="@string/pref_advanced_menu_sum"
-                    android:title="@string/pref_advanced_menu"/>
+                <MultiSelectListPreference
+                    android:defaultValue="@array/pref_android_menu_default"
+                    android:entries="@array/pref_android_menu_entries"
+                    android:entryValues="@array/pref_android_menu_entries"
+                    android:key="pref_android_menu"
+                    android:persistent="true"
+                    android:summary="@string/pref_android_menu_sum"
+                    android:title="@string/pref_android_menu"/>
                 <CheckBoxPreference
                     android:defaultValue="false"
                     android:key="pref_disable_splash"
