add minimum link length to statusbar

--- a/style.css
+++ b/style.css
@@ -759,6 +759,17 @@ h3 {
   padding: 4px 0.2em;
 }
 
+#loadlength {
+  background: #FFF;
+  color: #000000;
+  display: inline-block;
+  min-width: 3em;
+  border: 1px solid #20A8B1;
+  border-width: 0 1px;
+  margin: -4px 0;
+  padding: 4px 0.2em;
+}
+
 /* Dialogs
  */
 .ui-tooltip, .ui-dialog {
