move all preference related stuff in prefs subfolder

--- a/mobile/res/xml/preferences.xml
+++ b/mobile/res/xml/preferences.xml
@@ -42,7 +42,7 @@
             android:summary="@string/pref_plugins_sum"
             android:title="@string/pref_plugins">
             <intent
-                android:targetClass="com.cradle.iitc_mobile.IITC_PluginPreferenceActivity"
+                android:targetClass="com.cradle.iitc_mobile.PluginPreferenceActivity"
                 android:targetPackage="com.cradle.iitc_mobile"/>
         </PreferenceScreen>
 
@@ -102,7 +102,7 @@
                     android:key="pref_update_plugins_interval"
                     android:title="@string/pref_update_plugins_interval"
                     android:summary="@string/pref_update_plugins_interval_sum"/>
-                <com.cradle.iitc_mobile.IITC_ForceUpdatePreference
+                <com.cradle.iitc_mobile.prefs.ForceUpdatePreference
                     android:key="pref_force_plugin_update"
                     android:title="@string/pref_force_plugin_update"
                     android:summary="@string/pref_force_plugin_update_sum"/>
@@ -121,7 +121,7 @@
             android:key="pref_about_screen"
             android:persistent="false"
             android:title="@string/pref_about_title">
-            <com.cradle.iitc_mobile.IITC_AboutDialogPreference
+            <com.cradle.iitc_mobile.prefs.AboutDialogPreference
                 android:dialogIcon="@android:drawable/ic_dialog_info"
                 android:key="pref_about"
                 android:title="@string/pref_about_title"/>
