--- a/mobile/res/xml/preferences.xml
+++ b/mobile/res/xml/preferences.xml
@@ -106,6 +106,11 @@
                     android:key="pref_force_plugin_update"
                     android:title="@string/pref_force_plugin_update"
                     android:summary="@string/pref_force_plugin_update_sum"/>
+                <CheckBoxPreference
+                    android:defaultValue="true"
+                    android:key="pref_secure_updates"
+                    android:summary="@string/pref_secure_updates_sum"
+                    android:title="@string/pref_secure_updates"/>
             </PreferenceCategory>
             <PreferenceCategory
                 android:key="pref_advanced_tweaks_cat"
